src/main/resources/Krakatau-master/tests/assembler/bad/badstring.j
.class public u'\u3'
.super java/lang/Object
.end class